# MachineLearning-DL

./: .gitignore  CMakeLists.txt
inc/DL/: Batch.h  Cost.h  Metaparams.h  Model.h  ParamMatrix.h  Propagation.h
inc/DL/ActFunc/: ActFunc.h  Functions.h
inc/DL/InitFunc/: ActInit.h  Functions.h
inc/Settings/: Settings.h
inc/util/: Print.h  PrintModel.h
src/: CMakeLists.txt  main.cpp
src/DL/: Batch.cpp  Cost.cpp  Metaparams.cpp  Model.cpp  ParamMatrix.cpp  Propagation.cpp
src/DL/ActFunc/: ActFunc.cpp
src/DL/InitFunc/: ActInit.cpp  Functions.cpp
src/DL/MLModel/: BasicModel.cpp
src/util/: PrintModel.cpp
